--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
         </svg>
       </button>
     </div>
+    <!-- ./header-container -->
   </div>
+  <!-- ./header -->
+  <main class="main">
+    <section class="film-week">
+      <div class="container film-week__container">
+        <img src="img/duna.jpg" alt="Постер фильма Дюна" class="film-week__poster">
+        <h2 class="film-week__title">ДЮНА</h2>
+        <p class="film-week__tagline">За пределеами страха ждет судьба</p>
+        <button class="film-week__watch-btn">Смотреть фильм</button>
+        <a class="film-week__watch-trailer" href="#" aria-label="Смотреть трейлер"></a>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.film-week -->
+  </main>
+  <!-- /.main -->
+  <footer class="footer">
+
+  </footer>
+  <!-- /.footer -->
 </body>
 </html>
