layout other-films

--- a/index.html
+++ b/index.html
@@ -40,6 +40,67 @@
       <!-- /.container -->
     </section>
     <!-- /.film-week -->
+    <section class="other-films">
+      <div class="container">
+        <h2 class="other-films__title">Другие фильмы
+          <span class="other-films__title-add">на Methed Cinema</span>
+        </h2>
+        <ul class="other-films__list">
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/shangchi.jpg" alt="постер к фильму ШангЧи" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/freeguy.jpg" alt="постер к фильму Главный Герой" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/addamsfamily.jpg" alt="постер к фильму Семейка Аддамс" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/notimetodie.jpg" alt="постер к фильму Не время умирать" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/matrix.jpg" alt="постер к фильму Матрица" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/spiderman.jpg" alt="постер к фильму Спайдермен" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/infinite.jpg" alt="постер к фильму Бесконечность" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+          <li class="other-films__item">
+            <a href="" class="other-films__link">
+              <img src="img/eternals.jpg" alt="постер к фильму Этерналс" class="other-films__img">
+            </a>
+          </li>
+          <!-- ./other-films__item -->
+        </ul>
+        <!-- ./other-films__list -->
+        <button class="other-films__btn">Выбрать, что посмотреть</button>
+      </div>
+      <!-- ./container -->
+    </section>
+    <!-- ./other-films -->
   </main>
   <!-- /.main -->
   <footer class="footer">
