--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
+  <script type="module">
+    import { Fancybox } from "https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.esm.js";
+  </script>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js" defer></script>
   <title>FilmMeth</title>
@@ -17,7 +22,7 @@
       <form class="header__search-form" action="#">
         <input class="header__search-input" type="search" required placeholder="Поиск">
       </form>
-      <button class="header__burger-btn" aria-label="открыть меню">
+      <button class="header__burger-btn js-burger-btn" aria-label="открыть меню">
         <svg class="header__burger-svg" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4.94403 9.8959H34.6564" stroke-width="2.475" stroke-linecap="round" stroke-linejoin="round"/>
           <path d="M28.0537 19.8H4.94403" stroke-width="2.475" stroke-linecap="round" stroke-linejoin="round"/>
@@ -35,7 +40,7 @@
         <h2 class="film-week__title">ДЮНА</h2>
         <p class="film-week__tagline">За пределеами страха ждет судьба</p>
         <button class="film-week__watch-btn">Смотреть фильм</button>
-        <a class="film-week__watch-trailer" href="#" aria-label="Смотреть трейлер"></a>
+        <a class="film-week__watch-trailer" href="https://youtu.be/Q6nepw3fskg " aria-label="Смотреть трейлер" data-fancybox></a>
       </div>
       <!-- /.container -->
     </section>
@@ -47,49 +52,49 @@
         </h2>
         <ul class="other-films__list">
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/whv6KtrXIc0 " class="other-films__link" data-fancybox>
               <img src="img/shangchi.jpg" alt="постер к фильму ШангЧи" class="other-films__img">
             </a>
           </li>
           <!-- ./other-films__item -->
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/9FpufEP1jeI " class="other-films__link" data-fancybox>
               <img src="img/freeguy.jpg" alt="постер к фильму Главный Герой" class="other-films__img">
             </a>
           </li>
           <!-- ./other-films__item -->
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/zeKFmhPKgDs " class="other-films__link" data-fancybox>
               <img src="img/addamsfamily.jpg" alt="постер к фильму Семейка Аддамс" class="other-films__img">
             </a>
           </li>
           <!-- ./other-films__item -->
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/Z3b1GbPg2VM " class="other-films__link" data-fancybox>
               <img src="img/notimetodie.jpg" alt="постер к фильму Не время умирать" class="other-films__img">
             </a>
           </li>
           <!-- ./other-films__item -->
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/8qB8EGNOtr8 " class="other-films__link" data-fancybox>
               <img src="img/matrix.jpg" alt="постер к фильму Матрица" class="other-films__img">
             </a>
           </li>
           <!-- ./other-films__item -->
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/hlANal2_tsc " class="other-films__link" data-fancybox>
               <img src="img/spiderman.jpg" alt="постер к фильму Спайдермен" class="other-films__img">
             </a>
           </li>
           <!-- ./other-films__item -->
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/cnn8xghmxZA " class="other-films__link" data-fancybox>
               <img src="img/infinite.jpg" alt="постер к фильму Бесконечность" class="other-films__img">
             </a>
           </li>
           <!-- ./other-films__item -->
           <li class="other-films__item">
-            <a href="" class="other-films__link">
+            <a href="https://youtu.be/_oboseJViww " class="other-films__link" data-fancybox>
               <img src="img/eternals.jpg" alt="постер к фильму Этерналс" class="other-films__img">
             </a>
           </li>
@@ -145,5 +150,30 @@
     <!-- /.container -->
   </footer>
   <!-- /.footer -->
+  <nav class="navigation js-navigation">
+    <ul class="navigation__list">
+      <li class="navigation__item">
+        <a href="#" class="navigation__link">Публичная оферта</a>
+      </li>
+      <li class="navigation__item">
+        <a href="#" class="navigation__link">Партнёрам</a>
+      </li>
+      <li class="navigation__item">
+      <a href="#" class="navigation__link">FAQ</a>
+    </li>
+      <li class="navigation__item">
+        <a href="#" class="navigation__link">Приложения</a>
+      </li>
+      <li class="navigation__item">
+        <a href="#" class="navigation__link">Карта сайта</a>
+      </li>
+    </ul>
+    <button class="navigation__close js-navigation-close">
+      <svg class="navigation__close-cross" height="30px" viewBox="0 0 365.696 365.696" width="30px" xmlns="http://www.w3.org/2000/svg">
+        <path d="m243.1875 182.859375 113.132812-113.132813c12.5-12.5 12.5-32.765624 0-45.246093l-15.082031-15.082031c-12.503906-12.503907-32.769531-12.503907-45.25 0l-113.128906 113.128906-113.132813-113.152344c-12.5-12.5-32.765624-12.5-45.246093 0l-15.105469 15.082031c-12.5 12.503907-12.5 32.769531 0 45.25l113.152344 113.152344-113.128906 113.128906c-12.503907 12.503907-12.503907 32.769531 0 45.25l15.082031 15.082031c12.5 12.5 32.765625 12.5 45.246093 0l113.132813-113.132812 113.128906 113.132812c12.503907 12.5 32.769531 12.5 45.25 0l15.082031-15.082031c12.5-12.503906 12.5-32.769531 0-45.25zm0 0"/>
+      </svg>
+    </button>
+  </nav>
+  <!-- /.navigation -->
 </body>
 </html>
